# Olaf_bot

./: CMakeLists.txt  README.md  package.xml
Olaf_bot/: HH_meu.yaml
Olaf_bot/Olaf/: CMakeLists.txt  package.xml
Olaf_bot/Olaf_bringup/: CMakeLists.txt  package.xml  setup.py
Olaf_bot/Olaf_bringup/launch/: Olaf_imu.launch  Olaf_lidar_G2.launch  Olaf_model.launch  Olaf_motor.launch  Olaf_remote.launch  Olaf_remote_G2.launch  Olaf_robot.launch  Olaf_robot_G2.launch  Olaf_teleop_hh.launch
Olaf_bot/Olaf_bringup/launch/includes/: description.launch.G2.xml  description.launch.xml
Olaf_bot/Olaf_bringup/msg/: To_odom.msg  datas.msg
Olaf_bot/Olaf_bringup/nodes/: Olaf_movegoal.py  Olaf_push.py  odom_hh.cpp  omo_r1_motor_node.py  pub_vel.cpp
Olaf_bot/Olaf_bringup/src/: costmap_clear.cpp  odom_hh.cpp  odom_sh.cpp  olaf_movegoal.py  olaf_push.py  prac_client.py  prac_server.py  pub_vel.cpp  tu_listener.py  velCal.cpp  velCal_1.cpp
Olaf_bot/Olaf_bringup/src/omo_r1_bringup/: Olaf_movegoal.py
Olaf_bot/Olaf_bringup/srv/: AppData.srv  Appdata.srv
Olaf_bot/Olaf_description/: CMakeLists.txt  package.xml
Olaf_bot/Olaf_description/urdf/: Olaf.urdf.g2.xacro  Olaf.urdf.xacro
Olaf_bot/Olaf_gazebo/: CMakeLists.txt  package.xml
Olaf_bot/Olaf_gazebo/sdf/: Olaf.gazebo.xacro
Olaf_bot/Olaf_navigation/: CMakeLists.txt  package.xml
Olaf_bot/Olaf_navigation/launch/: Olaf_navigation.launch  Olaf_navigation_G2.launch  Olaf_navigation_rviz.launch  amcl.launch  move_base.launch
Olaf_bot/Olaf_navigation/maps/: map.pgm  map.yaml
Olaf_bot/Olaf_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Olaf_bot/Olaf_slam/: CMakeLists.txt  package.xml
Olaf_bot/Olaf_slam/launch/: Olaf_gmapping.launch  Olaf_slam.launch  Olaf_slam_G2.launch  Olaf_slam_rviz.launch
Olaf_bot/Olaf_teleop/: CMakeLists.txt  package.xml  setup.py
Olaf_bot/Olaf_teleop/launch/: Olaf_teleop_key.launch
Olaf_bot/Olaf_teleop/nodes/: Olaf_teleop_key
Olaf_bot/aws-robomaker-hospital-world-ros1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Olaf_bot/aws-robomaker-hospital-world-ros1/install/aws_robomaker_hospital_world/share/aws_robomaker_hospital_world/: package.ps1  package.sh
Olaf_bot/aws-robomaker-hospital-world-ros1/install/aws_robomaker_hospital_world/share/aws_robomaker_hospital_world/launch/: amcl_hospital.launch  hospital.launch  hospital_gmapping.launch
Olaf_bot/aws-robomaker-hospital-world-ros1/install/aws_robomaker_hospital_world/share/aws_robomaker_hospital_world/launch/install/: local_setup.sh  setup.bash  setup.ps1
Olaf_bot/aws-robomaker-hospital-world-ros1/install/aws_robomaker_hospital_world/share/aws_robomaker_hospital_world/models/aws_robomaker_hospital_nursesstation_01/: model.sdf
Olaf_bot/aws-robomaker-hospital-world-ros1/install/aws_robomaker_hospital_world/share/aws_robomaker_hospital_world/worlds/: base3_drug.world  base5.world  base7.world  base8.world  base9.world  elevator.world  test2  world_test.world
Olaf_bot/aws-robomaker-hospital-world-ros1/launch/: hospital_navigation.launch  move_base.launch  robot_hospital.launch  test.launch
Olaf_bot/aws-robomaker-hospital-world-ros1/launch/install/: setup.sh  setup.zsh
Olaf_bot/aws-robomaker-hospital-world-ros1/launch/log/: latest_build
Olaf_bot/aws-robomaker-hospital-world-ros1/log/: latest_build
Olaf_bot/aws-robomaker-hospital-world-ros1/worlds/: base.world  base2.world  base3.world  base4.world  base6.world
Olaf_bot/hospital_bot/: CMakeLists.txt  package.xml
Olaf_bot/hospital_bot/config/: joint_names_hospital_bot.yaml
Olaf_bot/hospital_bot/description/meshes/stl/: base_link.STL  camera.STL  lidar.STL  monitor.STL  sunban.STL  surab.STL  wheel_l.STL  wheel_r.STL
Olaf_bot/hospital_bot/description/urdf/: hospital_bot.csv  hospital_bot.urdf
Olaf_bot/hospital_bot/launch/: display.launch  gazebo.launch
Olaf_bot/hospital_bot/map/: final_map.yaml  only_drug_map.yaml  only_durg_map.pnm  only_durg_map.yaml  second_map.yaml  third_map.yaml
Olaf_bot/hospital_bot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
Olaf_bot/hospital_bot/rviz/: hospital_bot_navigation.rviz
Olaf_bot/hospital_bot/src/: send_robot_goal.cpp
Olaf_bot/robot_pose_ekf/: robot_pose_ekf.launch
Olaf_bot/robot_pose_ekf/src/: odom_estimation.cpp  odom_estimation_node.cpp
iahrs_driver/src/: iahrs_driver.cpp
include/motor_test/: motor_node.h
motor_test/: CMakeLists.txt  motor_input.txt  package.xml
motor_test/include/motor_test/: motor_node.h
motor_test/msg/: PID.msg
motor_test/src/: motor_node.cpp
msg/: To_odom.msg
robot_localization/params/: ekf_template.yaml  ukf_template.yaml
robot_localization/src/: ros_filter.cpp
servo_test/: CMakeLists.txt  package.xml
servo_test/launch/: servo_motor.launch
servo_test/src/: IR.py  IR_test.py  mg955_test.py  pub_signal.py  servo2.py
servo_test/srv/: request_to_motor.srv  sig_dy.srv
src/: cmd_vel.cpp  motor_node.cpp  odom_hh.cpp  pub_vel.cpp  velCal.cpp
